# Ledge

./: .gitignore  CALIBRATION_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  CURRENT_STATUS.md  DEPLOY.md  EXECUTIVE_SUMMARY.md  EXPERT_REVIEW.md  GUARANTEES.md  HACKER_NEWS_FINAL_PASS_LOG.md  HACKER_NEWS_READINESS.md  LICENSE  README.md  REFERENCE.md  RELEASE_READINESS.md  RESPONDING_TO_EXPERTS.md  SECURITY.md  TECHNICAL_REPORT.md  conftest.py  demo_chain.py  demo_guarantee1.py  demo_guarantee2.py  demo_guarantee3.py  demo_guarantee4.py  hello.ledge  hn_example_typecheck_results.txt  hn_risky_phrases.txt  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
audit/: PROTOCOL_REPORT_FINAL.md  ai_calibration_report.md  audit_manifest.md  audit_status.json  benchmark_results.json  contradictions.md  differential_report.md  docs_truth_matrix.md  failing_tests.csv  performance_budgets.json  release_readiness.md  score.json  score_public_release.json  security_findings.md
comparisons/: ledge_vs_python.py
docs/: AI_ADVANTAGE_STUDY.md  AI_SAFETY_STUDY.md  AI_UNCERTAINTY_EVIDENCE.md  AUDIT_ANCHORING.md  CAPABILITY_MATRIX.json  CAPABILITY_MATRIX.md  CLAIM_REGISTRY.md  COMPARATIVE_POSITIONING.md  COMPATIBILITY.md  FEATURE_MATRIX.md  GOVERNANCE.md  GRAMMAR.md  LAUNCH.md  LEDGE_V1_VISION.md  NORMATIVE_INDEX.md  PROPOSALS.md  PUBLIC_STATEMENT.md  QUICKSTART.md  RED_TEAM.md  REFERENCE.md  RELEASE_PROVENANCE.md  ROADMAP.md  SCORECARD.md  SECURITY.md  SEMANTICS.md  SPEC.md  STATIC_CHECKER.md  SUPPLY_CHAIN.md  THREAT_MODEL.md  TYPE_SYSTEM.md  UNCERTAINTY_MODEL.md  sample.ll
examples/: ai_agent.ledge  ai_pipeline_demo.ledge  document_pipeline.ledge  industrial_sensors.ledge  mcp_agent.ledge  medical_triage.ledge  tour.ledge  universal_deploy.ledge
examples/showcase/: calibration_demo.py  email_scanner.ledge  financial_analysis.ledge  financial_analysis_python.py  hiring_screen.ledge  legal_contracts.ledge  legal_contracts_python.py  llm_evaluator.ledge  llm_evaluator_python.py  loan_approval.ledge  medical_chain.ledge  medical_record.ledge  medical_triage.ledge  medical_triage_python.py  real_backend.py  test_comparison.py
experiments/: ai_validation.py  safety_proof.py
ledge_lang/: __init__.py  __main__.py  _version.py  ai_types.py  ast_nodes.py  audit_store.py  backends.py  calibration.py  cli.py  comparison.py  core_types.py  debugger.py  formatter.py  interpreter.py  jit.py  lexer.py  linter.py  lsp.py  nl_interface.py  parser.py  profiler.py  stdlib.py  test_runner.py  typechecker.py  vm.py
ledge_lang/compiler/: __init__.py  ccodegen.py  codegen.py  targets.py
ledge_lang/demos/: __init__.py  medical_triage.ledge
ledge_lang/studio/: server.py
scripts/: ci_wheel_smoke.py  pre_release_check.py  smoke_install.sh  supply_chain_check.py
tests/: conformance.py  fuzz.py  test_ledge.py  test_security.py
tests/compiler/: test_codegen.py  test_native.py
tests/conformance_suite/: test_conformance.py
tests/differential/: test_vm_random.py  test_vm_vs_treewalker.py
tests/examples/: test_examples.py
tests/fixtures/: ai_mocks.py
tests/fuzz_suite/: test_fuzzer.py
tests/integration/: test_cli_run_typecheck.py  test_install_smoke.py
tests/unit/: test_ai_native.py  test_audit_chain.py  test_audit_chain_invariants.py  test_calibration.py  test_checked_run_api.py  test_comparison.py  test_core_language.py  test_doc_examples.py  test_fuzz_surfaces.py  test_linter.py  test_mutation.py  (+6 more)
vscode-ledge/: language-configuration.json  package.json
(+4 files in other folders)
