[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ledge-lang"
version = "1.1.4"
description = "Ledge is a programming language and governance runtime for auditable, uncertainty-aware AI decisions."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Mikhail Balari" }]
keywords = ["programming-language", "interpreter", "ai", "language-design", "ai-governance", "uncertainty", "llm", "confidence", "audit-trail", "compliance", "type-safety", "regulated-ai", "interpretable-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev    = ["pytest", "black", "mypy"]
studio = ["flask>=3.0", "flask-socketio>=5.0"]

[project.scripts]
ledge = "ledge_lang.cli:main"

[project.urls]
Homepage = "https://github.com/Mikhail-Balari/Ledge"
Documentation = "https://github.com/Mikhail-Balari/Ledge/blob/main/README.md"
"Issue Tracker" = "https://github.com/Mikhail-Balari/Ledge/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ledge_lang*"]

[tool.black]
line-length = 100
target-version = ["py39"]
