[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "ledge-lang"
version = "1.2.0"
description = "Ledge is an experimental programming language for auditable, uncertainty-aware AI decision paths."
readme = "README.md"
license = "MIT"
authors = [{ name = "Mikhail Balari" }]
keywords = ["programming-language", "interpreter", "ai", "language-design", "uncertainty", "llm", "confidence", "audit-trail", "static-analysis", "ai-risk", "interpretable-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev    = ["pytest", "black", "mypy"]
studio = ["flask>=3.0", "flask-socketio>=5.0"]

[project.scripts]
ledge = "ledge_lang.cli:main"

[project.urls]
Homepage = "https://github.com/Mikhail-Balari/Ledge"
Documentation = "https://github.com/Mikhail-Balari/Ledge/blob/main/README.md"
"Issue Tracker" = "https://github.com/Mikhail-Balari/Ledge/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ledge_lang*"]

[tool.setuptools.package-data]
# Bundle .ledge demo files so `ledge demo <name>` works after `pip install`
# without requiring users to clone the repo.
"ledge_lang.demos" = ["*.ledge"]

[tool.black]
line-length = 100
target-version = ["py39"]
